// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> renders proper <Nav /> when signed in as Admin 1`] = `
<div
  data-testid="nav"
>
  <StyledText__StyledTextMenuWhite
    className="user"
  >
    <a
      className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 user"
    >
      User: 
      Karolina
    </a>
  </StyledText__StyledTextMenuWhite>
  <Link
    href="/"
  >
    <StyledText__StyledTextMenuWhite
      className="home "
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 home "
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Home
      </a>
    </StyledText__StyledTextMenuWhite>
  </Link>
  <Link
    href="/guides"
  >
    <StyledText__StyledTextMenuWhite
      className="guides"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 guides"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        MTB Guides
      </a>
    </StyledText__StyledTextMenuWhite>
  </Link>
  <Link
    href="/add_guide"
  >
    <StyledText__StyledTextMenuWhite
      className="add"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 add"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Add MTB Guide
      </a>
    </StyledText__StyledTextMenuWhite>
  </Link>
  <span
    className="signin"
  >
    <Signout>
      <StyledText__StyledTextMenuWhite
        onClick={[Function]}
      >
        <a
          className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6"
          onClick={[Function]}
        >
          <Icon
            aria-label="Logout"
            icon="person"
          >
            <ForwardRef(IconRoot)
              aria-label="Logout"
              className="rmwc-icon rmwc-icon--ligature material-icons"
            >
              <ForwardRef(Tag)
                aria-label="Logout"
                className="rmwc-icon rmwc-icon--ligature material-icons"
                tag="i"
              >
                <i
                  aria-label="Logout"
                  className="rmwc-icon rmwc-icon--ligature material-icons"
                >
                  person
                </i>
              </ForwardRef(Tag)>
            </ForwardRef(IconRoot)>
          </Icon>
        </a>
      </StyledText__StyledTextMenuWhite>
    </Signout>
  </span>
</div>
`;

exports[`<Nav /> renders proper <Nav /> with user name when signed in as User 1`] = `
<div
  data-testid="nav"
>
  <StyledText__StyledTextMenuWhite
    className="user"
  >
    <a
      className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 user"
    >
      User: 
      Magic
    </a>
  </StyledText__StyledTextMenuWhite>
  <Link
    href="/"
  >
    <StyledText__StyledTextMenuWhite
      className="home "
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 home "
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        Home
      </a>
    </StyledText__StyledTextMenuWhite>
  </Link>
  <Link
    href="/guides"
  >
    <StyledText__StyledTextMenuWhite
      className="guides"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <a
        className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6 guides"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        MTB Guides
      </a>
    </StyledText__StyledTextMenuWhite>
  </Link>
  <span
    className="signin"
  >
    <Signout>
      <StyledText__StyledTextMenuWhite
        onClick={[Function]}
      >
        <a
          className="StyledText__StyledTextMenuWhite-sc-1yfchkt-6"
          onClick={[Function]}
        >
          <Icon
            aria-label="Logout"
            icon="person"
          >
            <ForwardRef(IconRoot)
              aria-label="Logout"
              className="rmwc-icon rmwc-icon--ligature material-icons"
            >
              <ForwardRef(Tag)
                aria-label="Logout"
                className="rmwc-icon rmwc-icon--ligature material-icons"
                tag="i"
              >
                <i
                  aria-label="Logout"
                  className="rmwc-icon rmwc-icon--ligature material-icons"
                >
                  person
                </i>
              </ForwardRef(Tag)>
            </ForwardRef(IconRoot)>
          </Icon>
        </a>
      </StyledText__StyledTextMenuWhite>
    </Signout>
  </span>
</div>
`;
